crates/language-v2/tests/src/fail/p0_parsing/missing_field/test.stderr
error: Expected field: 'title'.
  --> src/fail/p0_parsing/missing_field/test.rs:14:13
   |
14 |             topics = []
   |             ^^^^^^
